Add tag content to frontmatter

--- a/src/entries.njk
+++ b/src/entries.njk
@@ -9,8 +9,10 @@ description: "Stuff I wrote on here"
       {%- for post in collections.entry | reverse -%}
         <li class="irevamp-postlist__content">
             <a href="{{ post.url }}" class="irevamp-text">{{ post.data.title }}</a>
-            <p style="margin-top: 5px" class="irevamp-lead">{{ post.data.date | postDate  }} {% if post.data.description %} • {{ post.data.description }}</p>{% endif %}
+            <p style="margin-top: 5px" class="irevamp-lead">{{ post.data.date | postDate  }} {% if post.data.description %} • {{ post.data.description }}{% endif %}
+        <span class="irevamp-lead irevamp-ink--secondary">{% for tag in post.data.tags.slice(1, 2) %}{% if tag != 'notes' %}<span> • {{tag}}</span>{% endif %}{% endfor %}</p>
         </li>
+    </span>
       {%- endfor -%}
 </ul>
 </div>
