--- a/src/entries.njk
+++ b/src/entries.njk
@@ -10,7 +10,7 @@ description: "Stuff I wrote on here"
         <li class="irevamp-postlist__content">
             <a href="{{ post.url }}" class="irevamp-text">{{ post.data.title }}</a>
             <p style="margin-top: 5px" class="irevamp-lead">{{ post.data.date | postDate  }} {% if post.data.description %} • {{ post.data.description }}{% endif %}
-        <span class="irevamp-lead irevamp-ink--secondary">{% for tag in post.data.tags.slice(1, 2) %}{% if tag != 'notes' %}<span> • {{tag}}</span>{% endif %}{% endfor %}</p>
+        {% if post.data.tags %}<span class="irevamp-lead irevamp-ink--secondary"> 🏷 {% for tag in post.data.tags.slice(1, 3) %}{% if tag != 'notes' %}<span>{{tag}} </span>{% endif %}{% endfor %}{% endif %}</p>
         </li>
     </span>
       {%- endfor -%}
