--- a/src/writing.njk
+++ b/src/writing.njk
@@ -26,12 +26,12 @@ I like to write. Find my [published works here](). As a former columnist for the
         <li class="irevamp-postlist">
           <div class="irevamp-postlist__content">
             <a href="{{ page.url }}" class="irevamp-text">{{ page.data.title }}</a>
-            <p class="irevamp-lead">{{ page.data.date | postDate  }} {% if page.data.description %} • {{ page.data.description }}{% endif %}<span class="irevamp-lead irevamp-ink--secondary">{% for tag in page.data.tags.slice(1, 2) %}{% if tag != 'notes' %}<span> • {{tag}}</span>{% endif %}{% endfor %}</p>
+            <p class="irevamp-lead">{{ page.data.date | postDate  }} {% if page.data.description %} • {{ page.data.description }}{% endif %}<span class="irevamp-lead irevamp-ink--secondary">{% for tag in page.data.tags.slice(1, 3) %}{% if tag != 'notes' %}<span> • {{tag}}</span>{% endif %}{% endfor %}</p>
           </div>
         </li>
       {%- endfor -%}
     </ul>
-        <div class="irevamp-h5 irevamp-mt-md bold600">Or <a href="/entries">read them all here</a>.</div>
+        <div class="irevamp-h5 irevamp-mt-md bold600">Or <a href="/entries">view them all here ({{ collections.entry | length }})</a>.</div>
 
   </div>
 </div>
