Fix pagination on writing, tag page

--- a/src/colophon.njk
+++ b/src/colophon.njk
@@ -13,7 +13,7 @@ The primary sans-serif typeface is [Work Sans](http://weiweihuanghuang.github.io
     
 The serif typeface on the menu page is [Libre Baskerville](https://fonts.google.com/specimen/Libre+Baskerville) by Pablo Impallari. On the same page, the sans-serif typeface used is [Lato](https://fonts.google.com/specimen/Lato), designed by Łukasz Dziedzic.    
 
-
+Wireframes / prototypes were developed using [Lunacy](https://icons8.com/lunacy). 
 
 I used [VSCode](https://code.visualstudio.com/) for development; [Chromium Nightly](https://www.chromium.org/Home/) and [Firefox](https://www.mozilla.org/en-US/firefox/new/) were used for testing.
 <hr />
