--- a/src/_layouts/menucard.njk
+++ b/src/_layouts/menucard.njk
@@ -12,7 +12,7 @@
       name="description"
       content="{{pageDescription}}"
     />
-    <link rel="icon" href="{{ '/favicon.png' | url }}" />
+    <link rel="icon" href="{{ '/img/favicon.png' | url }}" />
     <link href="{{ '/css/style.css' | url }}" rel="stylesheet" />
     <meta
       name="og:title"
