--- a/src/_includes/head.njk
+++ b/src/_includes/head.njk
@@ -7,7 +7,7 @@
       name="description"
       content="{{pageDescription}}"
 />
-  <link rel="icon" href="{{ '/favicons/favicon.png' | url }}"/>
+  <link rel="icon" href="{{ '/favicons/favicon.ico' | url }}"/>
   <link rel="apple-touch-icon" sizes="180x180" href="/favicons/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicons/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicons/favicon-16x16.png">
