--- a/src/colophon.njk
+++ b/src/colophon.njk
@@ -5,15 +5,15 @@ title: Colophon
 ---
 > <div class="irevamp-text"><span class="bold600">col⋅o⋅phon</span><i> n. </i>An inscription, usually at the end of a book, giving facts about its publication.</div>
 
-This website was created from scratch with love, on an old but trustworthy gaming laptop. It is written in HTML, Markdown, Nunjucks, CSS, and Javascript.
+This website was created on an old but trustworthy gaming laptop (red). It is written in HTML, Markdown, Nunjucks, CSS, and Javascript.
 
 [Eleventy](https://www.11ty.dev/) is used for static page generation. [Git](https://git-scm.com/) is used for version control. [Github](https://github.com) is used to store the repository. This site is hosted on [Netlify](https://www.netlify.com/).
+
+Original wireframes / prototypes were developed using [Lunacy](https://icons8.com/lunacy). Site icon is my own design; browser-compatible favicons were generated using [this site](https://realfavicongenerator.net/).
 
 The primary sans-serif typeface is [Work Sans](http://weiweihuanghuang.github.io/Work-Sans/) by Wei Huang. The text has a 5:1 contrast ratio at Level AA or better, as specified by [WCAG 2.0](https://www.w3.org/TR/WCAG20/).    
     
 The serif typeface on the menu page is [Libre Baskerville](https://fonts.google.com/specimen/Libre+Baskerville) by Pablo Impallari. On the same page, the sans-serif typeface used is [Lato](https://fonts.google.com/specimen/Lato), designed by Łukasz Dziedzic.    
-
-Wireframes / prototypes were developed using [Lunacy](https://icons8.com/lunacy). 
 
 I used [VSCode](https://code.visualstudio.com/) for development; [Chromium Nightly](https://www.chromium.org/Home/) and [Firefox](https://www.mozilla.org/en-US/firefox/new/) were used for testing.
 <hr />
