Update time separator in entry layout

--- a/src/_layouts/entry.njk
+++ b/src/_layouts/entry.njk
@@ -64,5 +64,5 @@ layout: base.njk
   //show output of code
   document
     .getElementById("time-to-read")
-    .innerHTML = "⁃ " + maincount + " minute read";
+    .innerHTML = "⁓ " + maincount + " minute read";
 </script>
