--- a/src/_includes/head.njk
+++ b/src/_includes/head.njk
@@ -2,7 +2,7 @@
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <meta name="generator" content="eleventy"/>
-  <title>{{pageTitle}}</title>
+  <title>{{ pageTitle | safe }}</title>
   <meta
       name="description"
       content="{{pageDescription}}"
