--- a/src/_layouts/base.njk
+++ b/src/_layouts/base.njk
@@ -1,22 +1,31 @@
-
 <!DOCTYPE html>
 <html lang="en">
-{%- set pageTitle %}{% if title %}{{ title }} | {% endif %}{{ meta.siteName }}{% endset -%}
-{%- set pageDescription %}{% if description %}{{ description }}{% else %}{{ meta.siteDescription }}{% endif %}{% endset -%}
-{%- set pageSocialImg %}{{ meta.url }}/previews/{% if title %}{{ title | slug }}{% else %}home{% endif %}.png{% endset -%}
-{% include 'head.njk' %}
-{% include 'sitenav.njk' %}
+  {%- set pageTitle %}
+  {% if title %}{{ title }} | {% endif %}{{ meta.siteName }}{% endset -%}
+  {%- set pageDescription %}
+  {% if description %}{{ description }}
+  {% else %}{{ meta.siteDescription }}
+  {% endif %}{% endset -%}
+  {%- set pageSocialImg %}{{ meta.url }}/previews/{% if title %}{{ title | slug }}
+  {% else %}home{% endif %}.png{% endset -%}
+  {% include 'head.njk' %}
+  {% include 'sitenav.njk' %}
 
-<body>
+  <body>
     <div>
-    {{ content | safe }}
+
+      {{ content | safe }}
+
+      <!-- Netlify Identity Widget -->
+      {% if path == "home" %}
+        <script type="text/javascript" src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+      {% endif %}
     </div>
 
-
-<footer>
-    <div class="irevamp-sitenav__container irevamp-ink--primary irevamp-text-align-center">
-    <ul role="list" class="irevamp-sitenav__navlist irevamp-sitenav__footer irevamp-list-unstyled">
-      {# {% for link in collections.pages %}
+    <footer>
+      <div class="irevamp-sitenav__container irevamp-ink--primary irevamp-text-align-center">
+        <ul role="list" class="irevamp-sitenav__navlist irevamp-sitenav__footer irevamp-list-unstyled">
+          {# {% for link in collections.pages %}
       <li>
         <a
           {% if currentUrl === link.url %}aria-current="page"{% endif %}
@@ -25,14 +34,20 @@
         </a>
       </li>
       {%- endfor %} #}
-      <li><a class="underline" href="/colophon">Colophon</a></li>
-      <li><a class="underline" href="/feed">RSS</a></li>
-      <li><a class="underline" href="#">Go to top</a></li>
-      <li class="irevamp-sitenav__navlist">© 2022 - Parth Shiralkar</li>
+          <li>
+            <a class="underline" href="/colophon">Colophon</a>
+          </li>
+          <li>
+            <a class="underline" href="/feed">RSS</a>
+          </li>
+          <li>
+            <a class="underline" href="#">Go to top</a>
+          </li>
+          <li class="irevamp-sitenav__navlist">© 2022 - Parth Shiralkar</li>
 
-       {# <li><a class="underline" href="/">Home</a></li> #}
-    </ul>
+          {# <li><a class="underline" href="/">Home</a></li> #}
+        </ul>
       </div>
     </footer>
-</body>
+  </body>
 </html>
