--- a/src/tags.njk
+++ b/src/tags.njk
@@ -10,18 +10,21 @@ permalink: /tags/{{ tag }}/
 title: Tagged content
 ---
 <div class="irevamp-hero">
-    <div class="irevamp-section slide-up">
-        <h3 style="margin-bottom: 0.6em;" class="bold600">Here are all articles tagged “{{ tag }}”:</h3>
-        <ul class="irevamp-list-unstyled irevamp-postlist">
-            {% set taglist = collections[tag] | reverse %}
-            {% for post in taglist %}
-                <li class="irevamp-postlist__content">
-                    <a href="{{ post.url }}" class="irevamp-text">{{ post.data.title }}</a>
-                    <p style="margin-top: 5px" class="irevamp-lead">{{ post.data.date | postDate  }} {% if post.data.description %} • {{ post.data.description }}{% endif %}</p>
-                </li>
-            {% endfor %}
-        </ul>
+<h3 style="margin-bottom: 0.6em;" class="bold600">Here are all articles tagged “{{ tag }}”:</h3>
+</div>
+<div class="irevamp-section slide-up">
+    <ul class="irevamp-list-unstyled irevamp-postlist">
+        {% set taglist = collections[tag] | reverse %}
+        {% for post in taglist %}
+            <li class="irevamp-postlist__content">
+                <a href="{{ post.url }}" class="irevamp-text">{{ post.data.title }}</a>
+                <p style="margin-top: 5px" class="irevamp-lead">{{ post.data.date | postDate  }}
+                    {% if post.data.description %} • {{ post.data.description }}
+                    {% endif %}
+                </p>
+            </li>
+        {% endfor %}
+    </ul>
 
-        <div class="irevamp-h5 irevamp-mt-xl bold600">Go back to <a href="/entries">all entries</a>.  Or visit <a href="/writing">the writing section</a> again.</div>
-    </div>
+    <div class="irevamp-h5 irevamp-mt-md bold600">Go back to <a href="/entries">all entries</a>.  Or visit <a href="/writing">the writing section</a> again.</div>
 </div>
