--- a/src/_layouts/base.njk
+++ b/src/_layouts/base.njk
@@ -43,9 +43,7 @@
           <li>
             <a class="underline" href="#">Go to top</a>
           </li>
-          <li class="irevamp-sitenav__navlist">© 2022 - Parth Shiralkar</li>
-
-          {# <li><a class="underline" href="/">Home</a></li> #}
+          <li>© 2022 - Parth Shiralkar</li>
         </ul>
       </div>
     </footer>
