--- a/src/entries.njk
+++ b/src/entries.njk
@@ -1,7 +1,7 @@
 ---
 layout: page.njk
 title: "All Entries"
-description: "Stuff I wrote on here"
+description: "Words, sentences, paragraphs, exclamations"
 ---
 
 <div class="irevamp-section slide-up">
