--- a/src/tags.njk
+++ b/src/tags.njk
@@ -10,7 +10,7 @@ permalink: /tags/{{ tag }}/
 title: Tagged content
 ---
 <div class="irevamp-hero">
-<h3 style="margin-bottom: 0.6em;" class="bold600">Here are all articles tagged “{{ tag }}”:</h3>
+<h3 style="margin-bottom: 0.6em;" class="bold600">Here are all entries tagged “{{ tag }}”:</h3>
 </div>
 <main class="irevamp-container">
 <div class="irevamp-section slide-up">
