--- a/src/_layouts/entry.njk
+++ b/src/_layouts/entry.njk
@@ -23,11 +23,11 @@ layout: base.njk
   <article class="irevamp-mx-auto" id="article">
     {{ content | safe }}
     <hr class="menu-hori"/ >
-    <p class="irevamp-lead" style="padding: 3vh 0;">Filed under:  
+    <p class="irevamp-lead" style="padding: 3vh 0;">Tagged:  
     {% for tag in tags %}
         {% if tag != 'entry' %}
           <span class="bold600">
-            <a href="/tags/{{ tag }}/" aria-label="Pages tagged with {{tag}}">
+            <a href="/tags/{{ tag }}/" aria-label="Entries tagged with {{tag}}">
               <span>
                 {{tag}}</span></a>
           </span>
