Add footnote to colophon

--- a/src/colophon.njk
+++ b/src/colophon.njk
@@ -26,3 +26,14 @@ I used [VSCode](https://code.visualstudio.com/) for development; [Chromium Night
 - The [A11Y Project](https://www.a11yproject.com/)
 
 
+<div class="irevamp-mt-md irevamp-mb-md ">
+
+<blockquote class="blockquote-lilac irevamp-text">
+    
+This page was built using the `base` layout. Most pages on this site use the `base` layout, which makes pages load faster.
+
+</blockquote>
+</div>
+
+
+
