Add climbing section

--- a/src/art.njk
+++ b/src/art.njk
@@ -2,7 +2,15 @@
 layout: page.njk
 templateEngineOverride: md, njk
 title: Art
-description: Content goes here
+description: Not a Renaissance man, not not a Renaissance man
 ---
 
-> [404 page test](nolinkhere)
+Find my published instrumental music/remixes at [SoundCloud](https://soundcloud.com/bhatji).
+
+I've written an anthology and an airport novel, both of which [can be found here]().
+
+Other writing can be found under [Writing](/writing).
+
+
+
+
