--- a/src/index.njk
+++ b/src/index.njk
@@ -6,19 +6,21 @@ templateEngineOverride: md, njk
   <div class="irevamp-container slide-up hello">
     <h1 class="irevamp-ink--primary salutation">Parth Shiralkar</h1>
     <div class="intro irevamp-content-maxlength irevamp-ink--primary uppercase">author. developer. likes daal.</div>
-    <div class="intro-about irevamp-content-maxlength irevamp-ink--primary">
-      
-  Like most delicious [recipes and dishes](/menu), I believe websites are made by carefully choosing a few simple ingredients and preparing them with great gusto.
+    <div class="intro irevamp-mt-md irevamp-content-maxlength irevamp-ink--primary" style="font-weight: 400;">
+  I love designing and developing slick, delightful user experiences. As such, I <a class="nolink" href="https://www.youtube.com/watch?v=6a7NjiFGTik" target="_blank"><span class="afterhidden"></span></a> in my personal and professional lives.
+  
+  </div>
 
-  I'm a big fan of several things. Currently, I work as a front-end web developer in [Portland, OR]().
+  <div class="intro irevamp-mt-sm irevamp-content-maxlength irevamp-ink--primary" style="font-weight: 400;">
+  I <a href="/climbing">climb</a> and <a class="" href="/art">make music</a> in my free time. Read <a class="" href="/about">more about me</a>.
+  
+  </div>
 
-<div class="irevamp-skin"></div>
+<div class="irevamp-mb-md"></div>
   <blockquote class="blockquote-lilac">
 
-**THIS WEBSITE IS CURRENTLY ~~AVAILABLE FOR VIEWING~~ UNDER CONSTRUCTION** (view the repo <a href="https://github.com/partheus/site-revamp">here</a>)
+**This website is available for casual viewing. Pages are still being built and might break.** (view the repo <a href="https://github.com/partheus/site-revamp">here</a>)
 </blockquote>
-
-> If you arrived to this page from the project menu card, go back [here](/menu)
 
 > Check out the [styleguide](/styleguide) for this site
 </div>
