--- a/src/sass/_animations.scss
+++ b/src/sass/_animations.scss
@@ -22,6 +22,10 @@ a:hover {
   transition: background-size ease-in-out 0.3s;
 }
 
+.nolink {
+  background: none;
+}
+
 // Custom hover state
 
 .underline {
