Fixes and updates

--- a/src/index.njk
+++ b/src/index.njk
@@ -6,18 +6,18 @@ templateEngineOverride: md, njk
   <div class="irevamp-container slide-up hello">
     <h1 class="irevamp-ink--primary salutation">Parth Shiralkar</h1>
     <div class="intro irevamp-content-maxlength irevamp-ink--primary uppercase">author. developer. likes daal.</div>
-    <div class="intro irevamp-mt-md irevamp-content-maxlength irevamp-ink--primary" style="font-weight: 400;">
+    <div class="intro irevamp-ink--primary irevamp-mt-md irevamp-content-maxlength" style="font-weight: 400;">
   I love designing and developing slick, delightful user experiences. As such, I <a class="nolink" href="https://www.youtube.com/watch?v=6a7NjiFGTik" target="_blank"><span class="afterhidden"></span></a> in my personal and professional lives.
   
   </div>
 
-  <div class="intro irevamp-mt-sm irevamp-content-maxlength irevamp-ink--primary" style="font-weight: 400;">
+  <div class="intro irevamp-mt-sm irevamp-content-maxlength" style="font-weight: 400;">
   I <a href="/climbing">climb</a> and <a class="" href="/art">make music</a> in my free time. Read <a class="" href="/about">more about me</a>.
   
   </div>
 
 <div class="irevamp-mb-md"></div>
-  <blockquote class="blockquote-lilac">
+    <blockquote class="blockquote-lilac">
 
 **This website is available for casual viewing. Pages are still being built and might break.** (view the repo <a href="https://github.com/partheus/site-revamp">here</a>)
 </blockquote>
@@ -32,6 +32,6 @@ templateEngineOverride: md, njk
 
 
 
-
+  
   {{ content | safe }}
 </main>
