--- a/src/climbing.njk
+++ b/src/climbing.njk
@@ -6,7 +6,7 @@ templateEngineOverride: md, njk
 ---
 I began climbing at the end of October, 2021, after moving to Portland from Iowa. Having climbed for a fun a couple times in college, it has now become a primary passion, enabling me to make new friends and connections. I'm grateful for its presence in my life.
 
-I treat bouldering like the therapeutic solitary activity it is; when you're on the rocks, trying to figure out the next move, the singularity of it all can engulf you in a detached state, where the only thing that exists apart from the rock face is you.
+I treat bouldering like the therapeutic solitary activity it is; when you're on the rocks, trying to figure out the next move, the singularity of it all can lead to a calm, detached state, where the only thing that exists apart from the rock face is you.
 
 In the indoor climbing community, I am a beginner-intermediate grade climber. This means that I can climb a [grade V4 problem](https://www.99boulders.com/bouldering-grades) indoors in one go (also known as [flashing a problem](https://www.climbernews.com/what-is-a-flash-in-climbing/)), and maybe a grade V5 on the same day with some effort.
 
