--- a/src/_includes/songs.njk
+++ b/src/_includes/songs.njk
@@ -1,5 +1,8 @@
-<div class="irevamp-container irevamp-mx-auto">
-<div class="irevamp-section slide-up">
-    Okay.
+<div class="music-recco">
+<img class="music-recco-icon" src="{{ '/img/spotify.png' }}">
+<div class="music-recco-about irevamp-text">
+<div class="music-recco-title"><a href="https://emilrottmayer.bandcamp.com/album/descend-reissue-purple-transparent-splatter" class="nolink" target="_blank">Descend by Emil Rottmayer ↗</a></div>
+<p class="irevamp-lead" style="font-size: 18px;">Best synthwave album. Last updated 03/17/2022</p>
 </div>
+
 </div>
