--- a/src/art.njk
+++ b/src/art.njk
@@ -7,7 +7,7 @@ description: Not a Renaissance man, not not a Renaissance man
 
 Find my published instrumental music/remixes at [SoundCloud](https://soundcloud.com/bhatji).
 
-I've written an anthology and an airport novel, both of which [can be found here]().
+I've written an anthology and an airport novel, both of which [can be found here](/works).
 
 Other writing can be found under [Writing](/writing).
 
