Update works section

--- a/src/sass/_typography.scss
+++ b/src/sass/_typography.scss
@@ -320,27 +320,39 @@ blockquote {
   background-color: beige;
   display: flex;
   flex-direction: column;
-  padding: 2em;
-  justify-content: center;
+  padding: 3em;
+  justify-items: center;
   border-radius: 5px;
   align-items: center;
-  row-gap: 2em;
+  row-gap: 3em;
 }
 
 .works-item a {
+  border: 3px dashed $irevamp-color-secondary-light;
+  padding: 1em;
   background: none;
   display: flex;
-  margin-bottom: 2em;
   flex-direction: column;
+  align-items: center;
 
   @include gt-sm {
+    align-items: flex-start;
     flex-direction: row;
   }
 }
 
 .works-cover {
-  box-shadow: none;
-  transition: all ease-in-out 0.3s;
+  -webkit-box-shadow: -2px 8px 15px -4px $irevamp-color-background;
+  box-shadow: -2px 8px 15px -4px $irevamp-color-background;
+  transition: all ease-in-out 0.2s;
+
+  @include lt-md {
+    // height: 10em;
+    // width: auto;
+    max-width: 75%;
+    justify-self: center;
+  }
+
   @include gt-sm {
     height: 15em;
   }
@@ -350,9 +362,9 @@ blockquote {
 .works-cover:hover {
   cursor: pointer;
   .works-cover {
-    -webkit-box-shadow: -2px 8px 15px -6px $irevamp-color-background;
-    box-shadow: -2px 8px 15px -6px $irevamp-color-background;
-    transition: all ease-in-out 0.3s;
+    -webkit-box-shadow: -2px 8px 20px 1px $irevamp-color-background;
+    box-shadow: -2px 8px 20px 1px $irevamp-color-background;
+    transition: all ease-in-out 0.2s;
   }
 }
 
@@ -360,12 +372,10 @@ blockquote {
   color: $irevamp-color-background;
   font-size: $irevamp-lead-font-size;
   font-weight: 400;
-  padding-left: 1em;
-  margin-top: 1em;
-  border-bottom: 1px solid $irevamp-color-secondary-light;
 
-  @include gt-sm {
+  margin-top: 1em;
+
+  @include gt-sm {  padding-left: 1em;
     margin-top: 0;
-    border-bottom: 0;
   }
 }
