--- a/src/works.njk
+++ b/src/works.njk
@@ -1,18 +1,9 @@
 ---
 layout: page.njk
 templateEngineOverride: md, njk
-title: Works
+title: Published Works
 ---
 <div class="works-bg slide-up">
-    <div class="works-item">
-        <a href="https://www.merriam-webster.com/words-at-play/jawn-meaning-origin" target="_blank">
-            <img class="works-cover" src="{{ '/img/works/jawnz.png' }}">
-            <div class="works-about">Jawnz
-Clothing that is stylish or expensive or both, usually high fashion. Started out as a meme. This poster I made combines two of my favorite things: fashion and maneating sharks.
-<p class="bold600">Click to read more.</p>
-            </div>
-        </a>
-    </div>
 
 <div class="works-item">
         <a href="https://www.goodreads.com/book/show/59850757-axis-of-damage" target="_blank">
