--- a/src/sass/_animations.scss
+++ b/src/sass/_animations.scss
@@ -26,6 +26,62 @@ a:hover {
   background: none;
 }
 
+// music bars 
+
+.music-bars {
+  margin-top: 4px;
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+  width: 2em;
+  height: 3em;
+
+  span {
+    width: 7.5px;
+    height: 100%;
+    background-color: $irevamp-color-secondary-light;
+    border-radius: 2px;
+    content: '';
+    animation: bounce 2.4s ease infinite alternate;
+    
+    &:nth-of-type(2) {
+      animation-delay: -2.2s; /* Start at the end of animation */
+      background-color: $irevamp-color-secondary;
+    }
+  
+    &:nth-of-type(3) {
+      animation-delay: -3.7s; /* Start mid-way of return of animation */
+      background-color: #8dd5ff;
+    }
+  }
+
+  .music-bars:hover {
+    filter: hue-rotate(222deg);
+  }
+}
+
+@keyframes bounce {
+  10% {
+    transform: scaleY(0.3); /* start by scaling to 30% */
+  }
+
+  30% {
+    transform: scaleY(1); /* scale up to 100% */
+  }
+
+  60% {
+    transform: scaleY(0.5); /* scale down to 50% */
+  }
+
+  80% {
+    transform: scaleY(0.75); /* scale up to 75% */
+  }
+
+  100% {
+    transform: scaleY(0.6); /* scale down to 60% */
+  }
+}
+
 // Custom hover state
 
 .underline {
