--- a/src/sass/_typography.scss
+++ b/src/sass/_typography.scss
@@ -292,7 +292,7 @@ blockquote {
   flex-direction: row;
   justify-content: flex-start;
   align-items: flex-start;
-  padding-top: 5px;
+  margin-top: 5px;
 }
 
 .music-recco-icon {
