--- a/src/colophon.njk
+++ b/src/colophon.njk
@@ -30,7 +30,7 @@ I used [VSCode](https://code.visualstudio.com/) for development; [Chromium Night
 
 <blockquote class="blockquote-lilac irevamp-text">
     
-This page was built using the `base` layout. Most pages on this site use the `base` layout, which makes pages load faster.
+> This page was built using the `base` layout. Most pages on this site use the `base` layout, which makes pages load faster. Read more about [static site generation](https://www.cloudflare.com/learning/performance/static-site-generator/)
 
 </blockquote>
 </div>
