--- a/src/breathe.njk
+++ b/src/breathe.njk
@@ -3,18 +3,30 @@ layout: base.njk
 title: Breathe
 description: Quick little breather animation for myself
 ---
-  <div class="irevamp-container  slide-up">
-    <h1 class="irevamp-content-maxlength irevamp-mx-auto irevamp-ink--primary irevamp-mb-none bold600">{{ title }}</h1>
-    {% if description %}
+<div class="irevamp-container  slide-up">
+  <h1 class="irevamp-content-maxlength irevamp-mx-auto irevamp-ink--primary irevamp-mb-none bold600">{{ title }}</h1>
+  {% if description %}
     <h5 class="irevamp-content-maxlength irevamp-ink--gray irevamp-mt-sm irevamp-mx-auto irevamp-description">
-     {{ description }}
+      {{ description }}
     </h5>
-    {% endif %}
-  </div>
-  <div class="breather-box">
-    <div class="breather-box__top">INHALE</div>
-    <div class="breather-box__right">HOLD</div>
-    <div class="breather-box__bottom">EXHALE</div>
-    <div class="breather-box__left">HOLD</div>
-    <div class="breather-box__dot"></div>
-  </div>
+  {% endif %}
+</div>
+<div class="breather-box">
+  <div class="breather-box__top">INHALE</div>
+  <div class="breather-box__right">HOLD</div>
+  <div class="breather-box__bottom">EXHALE</div>
+  <div class="breather-box__left">HOLD</div>
+  <div class="breather-box__dot"></div>
+</div>
+
+{# <ul class="irevamp-column-container">
+  {%- for page in collections.entry | reverse -%}
+    <li class="irevamp-card">
+      <div class="irevamp-card__content">
+        <a href="{{ page.url }}" class="irevamp-card__title bold600">{{ page.data.title }}</a>
+        <p class="irevamp-lead">{{ page.data.description }}</p>
+        <p class="irevamp-card__date">{{ page.data.date | postDate  }}</p>
+      </div>
+    </li>
+  {%- endfor -%}
+</ul> #}
