Add hyperlinks for writing stuff

--- a/src/writing.njk
+++ b/src/writing.njk
@@ -16,7 +16,7 @@ pagination:
 </div> #}
 {# > [404 page test](nolinkhere) #}
 
-I like to write. Find my [published works here](/works). As a former columnist for the Iowa State Daily, I have written copious amounts of polarizing nonsense. These [columns can be found here](https://www.iowastatedaily.com/search/?a=50cc513e-dd67-11e9-a119-3bb18836928e&s=start_time&sd=desc&l=75).
+I like to write. Find my [published works here](/works). Looking for free eBook downloads? [Go here](/writing/damage/) As a former columnist for the Iowa State Daily, I have written copious amounts of polarizing nonsense. These [columns can be found here](https://www.iowastatedaily.com/search/?a=50cc513e-dd67-11e9-a119-3bb18836928e&s=start_time&sd=desc&l=75).
 
 <div class="irevamp-container irevamp-mt-md">
   <div class="irevamp-section slide-up">
