--- a/src/damage.njk
+++ b/src/damage.njk
@@ -4,6 +4,7 @@ templateEngineOverride: md, njk
 title: Axis of Damage - Downloads
 permalink: /writing/damage/
 ---
+[See more published works](/works)
 
 Following are the various formats available for download (versions with large fonts below). By clicking on the links, the file will download directly to your machine.
 <p>Kindle users, you can email your device the .mobi file.</p>
