--- a/src/climbing.njk
+++ b/src/climbing.njk
@@ -4,7 +4,7 @@ title: Climbing
 description: My journey with bouldering and outdoor climbing
 templateEngineOverride: md, njk
 ---
-I began climbing at the end of October, 2021, after moving to Portland from Iowa. Having climbed for a fun a couple times in college, it has now become a primary passion, enabling me to make new friends and connections. I'm grateful for its presence in my life.
+I began climbing at the end of October, 2021, after moving to Portland from Iowa. Having climbed for fun a few times in college, I have now let it become a primary passion, enabling me to make new friends and connections. I'm grateful for its presence in my life.
 
 I treat bouldering like the therapeutic solitary activity it is; when you're on the rocks, trying to figure out the next move, the singularity of it all can lead to a calm, detached state, where the only thing that exists apart from the rock face is you.
 
