Add code page, update final frontmatter

--- a/src/_includes/sitenav.njk
+++ b/src/_includes/sitenav.njk
@@ -13,7 +13,7 @@
         <a class="underline" href="/writing">Writing</a>
       </li>
       <li>
-        <a class="underline" href="/art">Art</a>
+        <a class="underline" href="/code">Code</a>
       </li>
       <li>
         <a class="underline" href="/about">About</a>
