--- a/src/colophon.njk
+++ b/src/colophon.njk
@@ -5,6 +5,11 @@ title: Colophon
 ---
 > <div class="irevamp-text"><span class="bold600">col⋅o⋅phon</span><i> n. </i>An inscription, usually at the end of a book, giving facts about its publication.</div>
 
+<blockquote class="blockquote-lilac">
+
+**This website is available for casual viewing. Pages are still being built and might break.** (view the repo <a href="https://github.com/partheus/site-revamp">here</a>)
+</blockquote>
+
 This website was created on an old but trustworthy gaming laptop (red). It is written in HTML, Markdown, Nunjucks, CSS, and Javascript.
 
 [Eleventy](https://www.11ty.dev/) is used for static page generation. [Git](https://git-scm.com/) is used for version control. [Github](https://github.com) is used to store the repository. This site is hosted on [Netlify](https://www.netlify.com/).
