--- a/src/index.njk
+++ b/src/index.njk
@@ -12,15 +12,12 @@ templateEngineOverride: md, njk
   </div>
 
   <div class="intro irevamp-mt-sm irevamp-content-maxlength" style="font-weight: 400;">
-  I <a href="/climbing">climb</a> and <a class="" href="/art">make art</a> in my free time. Read <a class="" href="/about">more about me</a>.
+  I <a href="/climbing">climb</a>, <a href="/write">write</a>, and <a class="" href="/art">make art</a> in my free time. Read <a class="" href="/about">more about me</a>.
   
   </div>
 
 <div class="irevamp-mb-md"></div>
-    <blockquote class="blockquote-lilac">
 
-**This website is available for casual viewing. Pages are still being built and might break.** (view the repo <a href="https://github.com/partheus/site-revamp">here</a>)
-</blockquote>
 
 > Check out the [styleguide](/styleguide) for this site
 
