--- a/src/index.njk
+++ b/src/index.njk
@@ -7,12 +7,12 @@ templateEngineOverride: md, njk
     <h1 class="irevamp-ink--primary salutation">Parth Shiralkar</h1>
     <div class="intro irevamp-content-maxlength irevamp-ink--primary uppercase">author. developer. likes daal.</div>
     <div class="intro irevamp-ink--primary irevamp-mt-md irevamp-content-maxlength" style="font-weight: 400;">
-  I love designing and developing slick, delightful user experiences. Thereby, for a majority of time in my personal and professional lives, I <a class="nolink" href="https://www.youtube.com/watch?v=6a7NjiFGTik" target="_blank" tabindex="-1"><span class="afterhidden"></span></a>.
+  I love designing and developing slick, delightful user experiences. Thereby, for a majority of time in my personal and professional lives, I'm doing things to <a class="nolink" href="https://www.youtube.com/watch?v=6a7NjiFGTik" target="_blank" tabindex="-1"><span class="afterhidden"></span></a>.
   
   </div>
 
   <div class="intro irevamp-mt-sm irevamp-content-maxlength" style="font-weight: 400;">
-  I <a href="/climbing">climb</a>, <a href="/write">write</a>, and <a class="" href="/art">make art</a> in my free time. Read <a class="" href="/about">more about me</a>.
+  I <a href="/climbing">climb</a>, <a href="/writing">write</a>, and <a class="" href="/art">make art</a> in my free time. Read <a class="" href="/about">more about me</a>.
   
   </div>
 
