--- a/src/climbing.njk
+++ b/src/climbing.njk
@@ -10,7 +10,7 @@ I treat bouldering like the therapeutic solitary activity it is; when you're on 
 
 In the indoor climbing community, I am a beginner-intermediate grade climber. This means that I can climb a [grade V4 problem](https://www.99boulders.com/bouldering-grades) indoors in one go (also known as [flashing a problem](https://www.climbernews.com/what-is-a-flash-in-climbing/)), and maybe a grade V5 on the same day with some effort.
 
-This page will serve as a collection of my thoughts and musings on the routes I climb, and make sense of the [fascinating lingo of the climbing community](https://www.rei.com/learn/expert-advice/rock-climbing-glossary.html) I'm learing along the way.
+This page will serve as a collection of my thoughts and musings on the routes I climb. It will also help me make sense of the [fascinating lingo of the climbing community](https://www.rei.com/learn/expert-advice/rock-climbing-glossary.html) I'm learing along the way.
 
 {# <main class="irevamp-container"> #}
 <h5 style="margin-bottom: 0.6em;" class="bold600">Here are all entries related to climbing:</h5>
