Update code page

--- a/src/code.njk
+++ b/src/code.njk
@@ -7,6 +7,25 @@ description: My technical accomplishments, projects, work
 
 > (view this site's live repo <a href="https://github.com/partheus/site-revamp">here</a>)
 
-Take a look at this [portfolio gallery of my latest projects](/menu) disguised as a restaurant menu card.
+Like most delicious recipes and dishes, I believe websites are made by carefully choosing a few simple ingredients and preparing them with great gusto. For a quick summary of my work, take a look at this [portfolio gallery of my latest projects](/menu) disguised as a restaurant menu card.
 
-This page is still being built. Visit my <a href="https://github.com/partheus" target="_blank">GitHub</a> in the meantime.
+This page (project gallery, posts, etc.) is still being built. Visit my <a href="https://github.com/partheus" target="_blank">GitHub</a> in the meantime.
+
+
+<h5 style="margin-bottom: 0.6em;" class="bold600">Here are all entries related to development:</h5>
+
+
+<div class="irevamp-section slide-up">
+<ul class="irevamp-list-unstyled irevamp-postlist">
+{% set taglist = collections.development | reverse %}
+{% for post in taglist %}
+<li class="irevamp-postlist__content">
+<a href="{{ post.url }}" class="irevamp-text">{{ post.data.title }}</a>
+<p style="margin-top: 5px" class="irevamp-lead">{{ post.data.date | postDate  }}
+{% if post.data.description %} • {{ post.data.description }}
+{% endif %}
+</p>
+</li>
+{% endfor %}
+</ul>
+</div>
