--- a/src/code.njk
+++ b/src/code.njk
@@ -12,7 +12,8 @@ Like most delicious recipes and dishes, I believe websites are made by carefully
 This page (project gallery, posts, etc.) is still being built. Visit my <a href="https://github.com/partheus" target="_blank">GitHub</a> in the meantime.
 
 
-<h5 style="margin-bottom: 0.6em;" class="bold600">Here are all entries related to development:</h5>
+
+<h5 style="margin-bottom: 0.6em;" class="irevamp-mt-md bold600">Here are all entries related to development:</h5>
 
 
 <div class="irevamp-section slide-up">
