--- a/src/index.njk
+++ b/src/index.njk
@@ -12,7 +12,7 @@ templateEngineOverride: md, njk
   </div>
 
   <div class="intro irevamp-mt-sm irevamp-content-maxlength" style="font-weight: 400;">
-  I <a href="/climbing">climb</a>, <a href="/writing">write</a>, and <a class="" href="/art">make art</a> in my free time. Read <a class="" href="/about">more about me</a>.
+  I <a href="/climbing">climb</a>, <a href="/writing">write</a>, <a href="https://www.goodreads.com/review/list/60162168-parth-shiralkar">read</a> and <a class="" href="/art">make art</a> in my free time. See <a class="" href="/about">more about me</a>.
   
   </div>
 
