--- a/src/works.njk
+++ b/src/works.njk
@@ -2,6 +2,7 @@
 layout: page.njk
 templateEngineOverride: md, njk
 title: Published Works
+description: Ebooks that I've written, edited, designed the covers for, and self-published
 ---
 <div class="works-bg slide-up">
 
@@ -10,7 +11,7 @@ title: Published Works
             <img class="works-cover" src="{{ '/img/works/damage.png' }}">
             <div class="works-about">
 A private detective and his apprentice are hired to figure out the mystery behind strange, gruesome disappearances in a small Iowan town.
-<p class="bold600">Click to read more.</p>
+<p class="bold600">Click to see it on Goodreads. $0</p>
             </div>
         </a>
     </div>
@@ -20,7 +21,7 @@ A private detective and his apprentice are hired to figure out the mystery behin
             <img class="works-cover" src="{{ '/img/works/rare.png' }}">
             <div class="works-about">
 A boy looks for hope in a mystical land. On a faraway moon, a maintenance worker learns what it means to be afraid. An assassin boards a plane to kill her last victim, but she has made what may be a fatal mistake. A man on death row lives his last day. This is a collection of short stories.
-<p class="bold600">Click to read more.</p>
+<p class="bold600">Click to see it on Amazon. $0.99</p>
             </div>
         </a>
     </div>
