--- a/src/colophon.njk
+++ b/src/colophon.njk
@@ -7,7 +7,7 @@ title: Colophon
 
 <blockquote class="blockquote-lilac">
 
-**This website is available for casual viewing. Pages are still being built and might break.** (view the repo <a href="https://github.com/partheus/site-revamp">here</a>)
+**The site available for casual viewing. Pages are still being built and might break.** (view the repo <a href="https://github.com/partheus/site-revamp/projects/1">here</a>)
 </blockquote>
 
 This website was created on an old but trustworthy gaming laptop (red). It is written in HTML, Markdown, Nunjucks, CSS, and Javascript.
@@ -21,6 +21,9 @@ The primary sans-serif typeface is [Work Sans](http://weiweihuanghuang.github.io
 The serif typeface on the menu page is [Libre Baskerville](https://fonts.google.com/specimen/Libre+Baskerville) by Pablo Impallari. On the same page, the sans-serif typeface used is [Lato](https://fonts.google.com/specimen/Lato), designed by Łukasz Dziedzic.    
 
 I used [VSCode](https://code.visualstudio.com/) for development; [Chromium Nightly](https://www.chromium.org/Home/) and [Firefox](https://www.mozilla.org/en-US/firefox/new/) were used for testing.
+
+> **The site is riddled with all kinds of hidden artefacts. If you stumble across something weird that is not a typo, it was probably deliberate.**
+
 <hr />
 <div class="irevamp-text strong">Some resources I found helpful: </div>
 
