--- a/src/code.njk
+++ b/src/code.njk
@@ -5,11 +5,10 @@ title: Code
 description: My technical accomplishments, projects, work
 ---
 
-> (view this site's live repo <a href="https://github.com/partheus/site-revamp/projects/1">here</a>)
+> This page (project gallery, posts, etc.) is still being built. Visit my <a href="https://github.com/partheus" target="_blank">GitHub</a> in the meantime.
 
 Like most delicious recipes and dishes, I believe websites are made by carefully choosing a few simple ingredients and preparing them with great gusto. For a quick summary of my work, take a look at this [portfolio gallery of my latest projects](/menu) disguised as a restaurant menu card.
 
-This page (project gallery, posts, etc.) is still being built. Visit my <a href="https://github.com/partheus" target="_blank">GitHub</a> in the meantime.
 
 
 
