Add color swatch to colophon

--- a/src/breathe.njk
+++ b/src/breathe.njk
@@ -1,7 +1,7 @@
 ---
 layout: base.njk
 title: Breathe
-description: Quick little breather animation for myself
+description: Secret page. Welcome. Quick little breather animation for myself
 ---
 <div class="irevamp-container  slide-up">
   <h1 class="irevamp-content-maxlength irevamp-mx-auto irevamp-ink--primary irevamp-mb-none bold600">{{ title }}</h1>
@@ -18,6 +18,9 @@ description: Quick little breather animation for myself
   <div class="breather-box__left">HOLD</div>
   <div class="breather-box__dot"></div>
 </div>
+
+
+<button onclick="history.back()" class="irevamp-mx-auto intro-about bold600 uppercase pagenotfound-button" style="">Go back</button>
 
 {# <ul class="irevamp-column-container">
   {%- for page in collections.entry | reverse -%}
