--- a/src/colophon.njk
+++ b/src/colophon.njk
@@ -24,6 +24,9 @@ I used [VSCode](https://code.visualstudio.com/) for development; [Chromium Night
 
 > **The site is riddled with all kinds of hidden artefacts. If you stumble across something weird that is not a typo, it was probably deliberate.**
 
+{% include "swatchbox.njk" %}
+
+
 <hr />
 <div class="irevamp-text strong">Some resources I found helpful: </div>
 
@@ -32,7 +35,6 @@ I used [VSCode](https://code.visualstudio.com/) for development; [Chromium Night
 - Another [collection of nice 11ty resources](https://11ty.recipes/) by [Mark Aparicio](https://twitter.com/peruvianidol)
 
 - The [A11Y Project](https://www.a11yproject.com/)
-
 
 <div class="irevamp-mt-md irevamp-mb-md ">
 
