--- a/src/index.njk
+++ b/src/index.njk
@@ -19,7 +19,7 @@ templateEngineOverride: md, njk
 <div class="irevamp-mb-md"></div>
 
 
-> Check out the [styleguide](/styleguide) for this site
+> Check out the [styleguide](/styleguide) or the [colophon](/colophon) for this site
 
 
 <div class="irevamp-section">
