--- a/src/_includes/swatchbox.njk
+++ b/src/_includes/swatchbox.njk
@@ -1,4 +1,4 @@
-<div class="irevamp-mx-auto swatch-box">
+<div class="irevamp-container swatch-box">
     <p><a style="color: black;" class="nolink" href="/triangle">Site Identity</a></p>
 <div class='swatch background-bg'>#170808</div>
 <div class='swatch primary-bg'>#fff2e5</div>
