--- a/src/sass/_typography.scss
+++ b/src/sass/_typography.scss
@@ -407,7 +407,8 @@ blockquote {
     align-items: center;
     font-weight: 400;
     text-transform: lowercase;
-    width: 65vw;
+    width: 65%;
+    align-self: center;
   }
   
   .background-bg {
