Fix song module

--- a/src/_includes/songs.njk
+++ b/src/_includes/songs.njk
@@ -6,7 +6,7 @@
 <span></span>
 </div>
 <div class="music-recco-about irevamp-text">
-<div class="music-recco-title"><a href="https://emilrottmayer.bandcamp.com/album/descend-reissue-purple-transparent-splatter" class="nolink" target="_blank">Descend by Emil Rottmayer ↗</a></div>
+<div class="music-recco-title"><a href="https://emilrottmayer.bandcamp.com/album/descend-reissue-purple-transparent-splatter" class="nolink" target="_blank">Descend by Emil Rottmayer &#8599</a></div>
 <p class="irevamp-lead" style="font-size: 16px;">Last updated 03/17/2022</p>
 </div>
 
