Add to work page

--- a/src/works.njk
+++ b/src/works.njk
@@ -7,6 +7,16 @@ description: Ebooks that I've written, edited, designed the covers for, and self
 <div class="works-bg slide-up">
 
 <div class="works-item">
+        <a href="#" target="_blank">
+<img class="works-cover" src="{{ '/img/works/caper.png' }}">
+<div class="works-about">
+A group of criminals target a spy walking in downtown Portland. This short story chronicles his adventure for the day.
+<p class="bold600">To be published 2022</p>
+            </div>
+        </a>
+    </div>
+
+<div class="works-item">
         <a href="https://www.goodreads.com/book/show/59850757-axis-of-damage" target="_blank">
             <img class="works-cover" src="{{ '/img/works/damage.png' }}">
             <div class="works-about">
