--- a/src/works.njk
+++ b/src/works.njk
@@ -7,7 +7,7 @@ description: Ebooks that I've written, edited, designed the covers for, and self
 <div class="works-bg slide-up">
 
 <div class="works-item">
-        <a href="#" target="_blank">
+        <a href="#">
 <img class="works-cover" src="{{ '/img/works/caper.png' }}">
 <div class="works-about">
 A group of criminals target a spy walking in downtown Portland. This short story chronicles his adventure for the day.
