--- a/src/index.njk
+++ b/src/index.njk
@@ -7,7 +7,7 @@ templateEngineOverride: md, njk
     <h1 class="irevamp-ink--primary salutation">Parth Shiralkar</h1>
     <div class="intro irevamp-content-maxlength irevamp-ink--primary uppercase">author. developer. likes daal.</div>
     <div class="intro irevamp-ink--primary irevamp-mt-md irevamp-content-maxlength" style="font-weight: 400;">
-  I love designing and developing slick, delightful user experiences. Thereby, most of personal and professional time is spent doing things to <a class="nolink" href="https://www.youtube.com/watch?v=huHV8aW37ZM" target="_blank" tabindex="-1"><span class="tronafterhidden"></span></a>.
+  Hi! Welcome to this website. I love designing and developing slick, delightful user experiences. Thereby, most of personal and professional time is spent doing things to <a class="nolink" href="https://www.youtube.com/watch?v=huHV8aW37ZM" target="_blank" tabindex="-1"><span class="tronafterhidden"></span></a>.
   
   </div>
 
