--- a/src/colophon.njk
+++ b/src/colophon.njk
@@ -22,7 +22,7 @@ The serif typeface on the menu page is [Libre Baskerville](https://fonts.google.
 
 I used [VSCode](https://code.visualstudio.com/) for development; [Chromium Nightly](https://www.chromium.org/Home/) and [Firefox](https://www.mozilla.org/en-US/firefox/new/) were used for testing.
 
-> **The site is riddled with all kinds of hidden artefacts. If you stumble across something weird that is not a typo, it was probably deliberate.**
+> **The site is riddled with all kinds of hidden artefacts. If you stumble across something odd that is not a typo, it was probably intentional.**
 
 {% include "swatchbox.njk" %}
 
