--- a/src/sass/_typography.scss
+++ b/src/sass/_typography.scss
@@ -431,3 +431,7 @@ blockquote {
   .lilac-bg{
     background-color: #8dd5ff;
   }
+
+  .omg-babe:hover {
+    cursor: url(/img/omg-babe.jpg), auto;
+  }
