Add ids to parents

--- a/src/_layouts/base.njk
+++ b/src/_layouts/base.njk
@@ -11,7 +11,7 @@
   {% include 'head.njk' %}
   {% include 'sitenav.njk' %}
 
-  <body>
+  <body id="body-main">
     <div>
 
       {{ content | safe }}
