--- a/src/_includes/sitenav.njk
+++ b/src/_includes/sitenav.njk
@@ -1,6 +1,6 @@
 {% set currentUrl = page.url %}
 
-<nav aria-labelledby="irevamp-siteid" class="irevamp-sitenav">
+<nav aria-labelledby="irevamp-siteid" class="irevamp-sitenav" id="nav-main">
   <div class="irevamp-sitenav__container">
     <a  id="irevamp-siteid" href="/"
     {% if currentUrl === '/' %}aria-current="page"{% endif %}
