--- a/src/sass/_sitenav.scss
+++ b/src/sass/_sitenav.scss
@@ -45,7 +45,7 @@
 
 // stylelint-disable selector-max-type
 .irevamp-sitenav {
-  background-color: irevamp-color("background");
+  background-color: transparent;
 
   &__container,
   &__navlist {
