--- a/src/sass/_typography.scss
+++ b/src/sass/_typography.scss
@@ -435,3 +435,7 @@ blockquote {
   .omg-babe:hover {
     cursor: url(/img/omg-babe.jpg), auto;
   }
+
+  .artefact:hover {
+    cursor: url(/img/artefact.png), auto;
+  }
