--- a/src/colophon.njk
+++ b/src/colophon.njk
@@ -10,8 +10,10 @@ title: Colophon
 **The site available for casual viewing. Pages are still being built and might break.** (view the repo <a href="https://github.com/partheus/site-revamp/projects/1">here</a>)
 </blockquote>
 
-> **The site is riddled with all kinds of hidden artefacts. If you stumble across something odd that is not a typo, it was probably intentional.**
+> **The site is riddled with all kinds of hidden <a href="#" onclick="artefactGradient()" class="nolink artefact" style="color: inherit;">artefacts</a>. If you stumble across something odd that is not a typo, it was probably intentional.**
 
+{% include "swatchbox.njk" %}
+<div class="irevamp-mb-md"></div>
 
 This website was created on an old but trustworthy gaming laptop (red). It is written in HTML, Markdown, Nunjucks, CSS, and Javascript.
 
@@ -25,8 +27,6 @@ The serif typeface on the menu page is [Libre Baskerville](https://fonts.google.
 
 I used [VSCode](https://code.visualstudio.com/) for development; [Chromium Nightly](https://www.chromium.org/Home/) and [Firefox](https://www.mozilla.org/en-US/firefox/new/) were used for testing.
 
-
-{% include "swatchbox.njk" %}
 
 
 <hr />
@@ -48,4 +48,12 @@ I used [VSCode](https://code.visualstudio.com/) for development; [Chromium Night
 </div>
 
 
-
+<script>
+function artefactGradient() {
+   event.preventDefault(); 
+    var body = document.getElementById("body-main");
+    var nav = document.getElementById("nav-main");
+    body.classList.toggle("bg-gradient");
+    nav.classList.toggle("bg-gradient");
+}
+</script>
