--- a/src/index.njk
+++ b/src/index.njk
@@ -12,20 +12,20 @@ templateEngineOverride: md, njk
   </div>
 
   <div class="intro irevamp-mt-sm irevamp-content-maxlength" style="font-weight: 400;">
-  I <a href="/writing">write</a>, <a href="https://www.goodreads.com/user_challenges/31527237" target="_blank">read</a>, <a class="" href="/art">make art</a>, and <a href="/climbing">climb</a> in my free time. See <a class="" href="/about">more about me</a>.
+  I <a href="/writing">write</a>, <a href="https://www.goodreads.com/user_challenges/31527237" target="_blank">read</a>, <a class="" href="/art">make art</a>, and <a href="/climbing">climb</a>. There's also other <a class="" href="/about">cool stuff</a>.
   
   </div>
+
+{# > [Contact](/hello) #}
+
 
 <div class="irevamp-mb-md"></div>
 
 
-> Check out the [styleguide](/styleguide) or the [colophon](/colophon) for this site
+{# > Check out the [styleguide](/styleguide) or the [colophon](/colophon) for this site #}
 
 
-<div class="irevamp-section">
-<div class="irevamp-h5 irevamp-mt-md bold600">Now Playing</div>
-{% include "songs.njk" %}
-</div>
+
 </div>
 </div>
 
@@ -33,3 +33,14 @@ templateEngineOverride: md, njk
 <main class="irevamp-container">
 {{ content | safe }}
 </main>
+
+
+{# <script>
+      function nowPlaying() {
+        var audio = document.getElementById("now-playing");
+        audio.play();
+      }
+</script>
+
+<input type="button" value="PLAY" onclick="nowPlaying()">
+<audio id="now-playing" src="https://interactive-examples.mdn.mozilla.net/media/cc0-audio/t-rex-roar.mp3"></audio> #}
