Update works section

--- a/src/damage.njk
+++ b/src/damage.njk
@@ -3,8 +3,9 @@ layout: page.njk
 templateEngineOverride: md, njk
 title: Axis of Damage - Downloads
 permalink: /writing/damage/
+description: You've arrived at the page for free copies of my self-published e-book
 ---
-[See more published works](/works)
+[See other literary projects](/works) or go back to the [writing section](/writing)
 
 Following are the various formats available for download (versions with large fonts below). By clicking on the links, the file will download directly to your machine.
 <p>Kindle users, you can email your device the .mobi file.</p>
