--- a/src/works.njk
+++ b/src/works.njk
@@ -1,7 +1,7 @@
 ---
 layout: page.njk
 templateEngineOverride: md, njk
-title: Published Works
+title: Written Works
 description: Ebooks that I've written, edited, designed the covers for, and self-published
 ---
 <div class="works-bg slide-up">
