--- a/src/writing.njk
+++ b/src/writing.njk
@@ -16,9 +16,11 @@ pagination:
 </div> #}
 {# > [404 page test](nolinkhere) #}
 
-I like to write. Find my [published works here](/works). Looking for free eBook downloads? [Go here](/writing/damage/).
+I like to write. Here's a few of my [literary projects](/works).
 
-As a <span class="omg-babe">former columnist</span> for the Iowa State Daily, I have written copious amounts of polarizing nonsense. These [columns can be found here](https://www.iowastatedaily.com/search/?a=50cc513e-dd67-11e9-a119-3bb18836928e&s=start_time&sd=desc&l=75).
+Looking for free e-book downloads? [Go here](/writing/damage/).
+
+As a <span class="artefact">former columnist</span> for the Iowa State Daily, I have written copious amounts of polarizing nonsense. These [columns can be found here](https://www.iowastatedaily.com/search/?a=50cc513e-dd67-11e9-a119-3bb18836928e&s=start_time&sd=desc&l=75).
 
 <div class="irevamp-container irevamp-mt-md">
   <div class="irevamp-section slide-up">
