--- a/src/code.njk
+++ b/src/code.njk
@@ -7,6 +7,8 @@ description: My technical accomplishments, projects, work
 
 > This page (project gallery, posts, etc.) is still being built. Visit my <a href="https://github.com/partheus" target="_blank">GitHub</a> in the meantime.
 
+> [Site colophon](/colophon)
+
 Like most delicious recipes and dishes, I believe websites are made by carefully choosing a few simple ingredients and preparing them with great gusto. For a quick summary of my work, take a look at this [portfolio gallery of my latest projects](/menu) disguised as a restaurant menu card.
 
 
