--- a/src/colophon.njk
+++ b/src/colophon.njk
@@ -2,20 +2,21 @@
 layout: post.njk
 templateEngineOverride: md, njk
 title: Colophon
+date: Last modified
 ---
 > <div class="irevamp-text"><span class="bold600">col⋅o⋅phon</span><i> n. </i>An inscription, usually at the end of a book, giving facts about its publication.</div>
 
 <blockquote class="blockquote-lilac">
 
-**The site available for casual viewing. Pages are still being built and might break.** (view the repo <a href="https://github.com/partheus/site-revamp/projects/1">here</a>)
+**The site available for casual viewing. Pages are still being built and might break.** (view the repo <a href="https://github.com/partheus/site-revamp/">here</a>)
 </blockquote>
 
-> **The site is riddled with all kinds of hidden <a href="#" onclick="artefactGradient()" class="nolink artefact" style="color: inherit;">artefacts</a>. If you stumble across something odd that is not a typo, it was probably intentional.**
+> **The site is riddled with all kinds of hidden <a href="#" class="nolink artefact" style="color: inherit;">artefacts</a>. If you stumble across something odd that is not a typo, it was probably intentional.**
 
 {% include "swatchbox.njk" %}
 <div class="irevamp-mb-md"></div>
 
-This website was created on an old but trustworthy gaming laptop (red). It is written in HTML, Markdown, Nunjucks, CSS, and Javascript.
+This website was created on an old but trustworthy gaming laptop (red). It is written in HTML, Markdown, Nunjucks, CSS, and Javascript. [Styleguide here](/styleguide).
 
 [Eleventy](https://www.11ty.dev/) is used for static page generation. [Git](https://git-scm.com/) is used for version control. [Github](https://github.com) is used to store the repository. This site is hosted on [Netlify](https://www.netlify.com/).
 
@@ -40,20 +41,24 @@ I used [VSCode](https://code.visualstudio.com/) for development; [Chromium Night
 
 <div class="irevamp-mt-md irevamp-mb-md ">
 
-<blockquote class="blockquote-lilac irevamp-text">
+<blockquote class="blockquote-lilac irevamp-lead">
     
-> This page was built using the `base` layout. Most pages on this site use the `base` layout, which makes pages load faster. Read more about [static site generation](https://www.cloudflare.com/learning/performance/static-site-generator/)
+This page was built using the `base` layout I made. Most pages on this site use the same `base` layout, which makes pages load faster. Read more about [static site generation](https://www.cloudflare.com/learning/performance/static-site-generator/)
 
 </blockquote>
 </div>
 
+Last updated: {{ date }}
 
 <script>
-function artefactGradient() {
+{# function artefactGradient() {
    event.preventDefault(); 
     var body = document.getElementById("body-main");
     var nav = document.getElementById("nav-main");
     body.classList.toggle("bg-gradient");
     nav.classList.toggle("bg-gradient");
-}
+
+
+    //onclick="artefactGradient()"
+} #}
 </script>
