--- a/src/entries.njk
+++ b/src/entries.njk
@@ -2,6 +2,7 @@
 layout: page.njk
 title: "All Entries"
 description: "Words, sentences, paragraphs, exclamations"
+templateEngineOverride: md, njk
 ---
 
 <div class="irevamp-section slide-up">
@@ -16,3 +17,6 @@ description: "Words, sentences, paragraphs, exclamations"
       {%- endfor -%}
 </ul>
 </div>
+
+
+> Go [back to writing](/writing)
