--- a/src/_layouts/base.njk
+++ b/src/_layouts/base.njk
@@ -41,6 +41,9 @@
             <a class="underline" href="/feed">RSS</a>
           </li>
           <li>
+            <a class="underline" href="/hello">Say Hi</a>
+          </li>
+          <li>
             <a class="underline" href="#">Go to top</a>
           </li>
           <li>© 2022 - Parth Shiralkar</li>
