Change weights and font sizing

--- a/src/_layouts/base.njk
+++ b/src/_layouts/base.njk
@@ -43,7 +43,7 @@
           <li>
             <a class="underline" href="#">Go to top</a>
           </li>
-          <li>© 2022 - Parth Shiralkar</li>
+          <li style="font-size: 1.15em;">© 2022 - Parth Shiralkar</li>
         </ul>
       </div>
     </footer>
