Make frontmatter font sizing consistent

--- a/src/sass/_sitenav.scss
+++ b/src/sass/_sitenav.scss
@@ -78,7 +78,7 @@
     }
 
     p, li > a {
-      font-size: $irevamp-mini-font-size;
+      font-size: $irevamp-text-font-size;
       text-decoration: none;
       font-family: $irevamp-font-family-primary;
       letter-spacing: 0;
