--- a/src/sass/_typography.scss
+++ b/src/sass/_typography.scss
@@ -116,7 +116,7 @@ h5,
 
 p,
 li {
-  font-size: $irevamp-mini-font-size;
+  font-size: $irevamp-text-font-size;
 
   @include gt-sm {
     font-size: $irevamp-lead-font-size;
