--- a/src/writing.njk
+++ b/src/writing.njk
@@ -18,7 +18,7 @@ pagination:
 
 I like to write. Here's a few of my [literary projects](/works).
 
-Looking for free e-book downloads? [Go here](/writing/damage/).
+There is also a [free e-book page](/writing/damage/).
 
 As a <span class="artefact">former columnist</span> for the Iowa State Daily, I have written copious amounts of polarizing nonsense. These [columns can be found here](https://www.iowastatedaily.com/search/?a=50cc513e-dd67-11e9-a119-3bb18836928e&s=start_time&sd=desc&l=75).
 
